# rat-executor-v2

./: LICENSE
RAT-v2-source/: README.md
RAT-v2-source/scripts/: FREE SKID GUI.lua  brm5.lua  operation one.lua  pending.lua  quirkycmd.lua  script.lua
RAT-v2-source/src/: build.sh  index.html  index.js  package-lock.json  package.json
RAT-v2-source/src/src-tauri/: Cargo.toml  tauri.conf.json
RAT-v2-source/src/src-tauri/capabilities/: default.json
RAT-v2-source/src/src-tauri/src/: main.rs
ratexecutor/: README.md  build.sh  index.html  index.js  package-lock.json  package.json  prepare-tauri-frontend.mjs
ratexecutor/src-tauri/: Cargo.toml  tauri.conf.json
ratexecutor/src-tauri/capabilities/: default.json
ratexecutor/src-tauri/icons/: icon.icns
ratexecutor/src-tauri/src/: main.rs
