[package]
name = "radium_tauri"
version = "6.1.0"
description = "Radium desktop app"
authors = ["Radium"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
flate2 = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
typenum = "1"
urlencoding = "2"
walkdir = "2"
